Sat Aug  2 23:47:45 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: separate WIN32OLE::VARIANT src file
	  from win32ole.c
	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_variant_m.c: ditto.
	* ext/win32ole/win32ole_variant_m.h: ditto.
	* ext/win32ole/depend: ditto.
	* ext/.document: ditto.

Sat Aug  2 14:34:58 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add coments for rdoc.

Sat Aug  2 10:26:57 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_obj_itself): new method Object#itself.  based on the
	  patch by Rafael Franca in [ruby-core:64156].
	  [EXPERIMENTAL] this method may be renamed due to compatibilities.
	  [ruby-core:44704] [Feature #6373]

Fri Aug  1 22:30:40 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (folerecord_inititalize): accept
	  only 2 arguments. The 2nd argument should be WIN32OLE object or
	  WIN32OLE_RECORD object.

Fri Aug  1 20:17:33 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_variant2val): call
	  folerecord_s_allocate instead of WIN32OLE_RECORD.new.

Fri Aug  1 18:39:57 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/date/test_date.rb: remove commented-out code.
	* test/date/test_date_arith.rb: ditto.
	* test/date/test_date_attr.rb: ditto.
	* test/date/test_date_parse.rb: ditto.

Fri Aug  1 16:35:32 2014  Evan Miller  <evan@squareup.com>

	* numeric.c (flodivmod): all results are NaN if divisor is NaN.
	  [fix GH-692]

Thu Aug 01 07:28:12 2014  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c: [DOC] Add description of
	  `BigDecimal.new` exceptions.  Patched by @joker1007 and
	  @prathamesh-sonpatki [Fixes GH-690]
	  https://github.com/ruby/ruby/pull/690

Thu Jul 31 22:20:12 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add WIN32OLE_RECORD#inspect.

Thu Jul 31 20:35:32 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>
